2002-02-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* [w3m-dev 03038] LDFLAGS
	* XMakefile: refer to LDFLAGS when linking
	* configure: add -ldflags=*

2002-02-12  Yoshinobu Sakane <sakane@d4.bsd.nes.nec.co.jp>

	* [w3m-dev 03036]
	* display.c (displayBuffer): ifdef USE_SSL

2002-02-10  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03034] check buf
	* frame.c (frame_download_source): buf->ssl_certificate can be used
			only if buf != NULL && buf != NO_BUFFER

2002-02-10  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03033] SSL indicator
	* display.c (displayBuffer): show SSL indicator

2002-02-08  Yoshinobu Sakane <sakane@d4.bsd.nes.nec.co.jp>

	* [w3m-dev 03025] fix image loading on EWS4800
	* image.c (loadImage): exit if symlink failed
			exit if fopen failed

2002-02-08  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03022] SSL certificates of frame body
	* frame.h (frame_body): add ssl_certificate
	* frame.c (frame_download_source): save ssl_certificate
	* map.c (append_frame_info): display ssl_certificate of frame_body

2002-02-08  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03021] Bug#132934: w3m should recognize file:/uris
				in chkURLBuffer function
	* main.c (chkURLBuffer): add "file:" 

2002-02-08  Yuji Abe <cbo46560@pop12.odn.ne.jp>

	* [w3m-dev 03017] URI scheme is case insensitive
	* url.c (searchURIMethods): s/strcmp/strcasecmp/

2002-02-08  Tsutomu Okada <okada@furuno.co.jp>

	* [w3m-dev 03011] segmentation fault on <input> tag without <form>
	* file.c (process_input): tmp initialization fix

2002-02-07  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [emacs-w3m:02733] for emacs-w3m better rendering with inline image
	* main.c (MAIN): activeImage = TRUE when -halfdump & display_image=1

2002-02-07  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03006] fix form order in table
	* file.c (process_form): static
			fix form index order
			method should be quoted
	* file.c (process_form): added