@@ -1,3 +1,8 @@
+2002-02-14  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 03053] Re: SSL indicator
+	* main.c (dump_extra): Output SSL certificate.
+
 2002-02-12  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* [w3m-dev 03038] LDFLAGS
